# t2t

./: .gitignore  Cargo.toml  LICENSE  README.md  entitlements.plist  macos-info.plist  package.json  svelte.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
.coey-crawl/: agentcast.html  agentic-architecture.html  agents-patterns.html  bio.html  blaze.html  cache-sync.html  ditto.html  edgewire.html  email-agents.html  fleet-pattern.html  post-form.html  promptlog.html  real-time-logging.html  remote-stack.html  sitemap.xml  tiny.html  trust-broker.html  userdo.html  workflow-live.html
.coey-crawl/text/: agentcast.txt  agentic-architecture.txt  agents-patterns.txt  bio.txt  blaze.txt  cache-sync.txt  ditto.txt  edgewire.txt  email-agents.txt  fleet-pattern.txt  post-form.txt  promptlog.txt  real-time-logging.txt  remote-stack.txt  tiny.txt  trust-broker.txt  userdo.txt  workflow-live.txt
.github/workflows/: release.yml
app/: drizzle.config.ts  package.json  svelte.config.js  tsconfig.json  vite.config.ts
app/src/: app.d.ts  app.html  hooks.server.ts
app/worker/: index.ts  package.json
capabilities/: default.json
desktop/: Cargo.toml  macos-info.plist  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
desktop/capabilities/: default.json
icons/: icon.icns
release-artifacts/: t2t_0.3.4_macos_aarch64.dmg
scripts/: generate-icons.sh
src/: app.css  app.d.ts  app.html  lib.rs  main.rs
web/: README.md  alchemy.run.ts  package.json  vite.config.ts
worker/: .gitignore  README.md  alchemy.run.ts  package.json  tsconfig.json
(+139 files in other folders)
