[package]
name = "t2t"
version = "0.1.0"
edition = "2021"

[lib]
name = "t2t_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.14"
once_cell = "1.19"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# xdotool called via Command

[profile.release]
strip = true
lto = true
